--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,4 +7,18 @@ jobs: #Начало секции джобов
     
     steps: #Начало секции шагов
       - name: Print hello #Название шага
-        run: echo "Hello world!" #Команда, которая будет выполнена в терминале 
+        run: echo "Hello world!" #Команда, которая будет выполнена в терминале
+
+  print_full_technical_info: #Начало секции второй джобы
+    runs-on: ubuntu-latest #Среда выполнения джоба
+    
+    steps: #Начало секции шагов
+      - name: Print full_tech_info #Название шага
+        run: sudo lshw #Команда, которая будет выполнена в терминале
+
+  print_short_technical_info: #Начало секции третий джобы
+    runs-on: ubuntu-latest #Среда выполнения джоба
+    
+    steps: #Начало секции шагов
+      - name: Print short_tech_info #Название шага
+        run: sudo lshw -short #Команда, которая будет выполнена в терминале
