--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,26 +1,29 @@
-name: Print workflow #Название workflow
-on: workflow_dispatch #Триггер, который будет вызывать workflow
+name: Python linters and tests
 
-jobs: #Начало секции джобов
-  print_hello: #Название джоба
-    runs-on: ubuntu-latest #Среда выполнения джоба
-    
-    steps: #Начало секции шагов
-      - name: Print hello #Название шага
-        run: echo "Hello world!" #Команда, которая будет выполнена в терминале
+# on: [push, pull_request]
+on: workflow_dispatch
 
-  print_full_technical_info: #Начало секции второй джобы
-    needs: print_hello
-    runs-on: ubuntu-latest #Среда выполнения джоба
-    
-    steps: #Начало секции шагов
-      - name: Print full_tech_info #Название шага
-        run: sudo lshw #Команда, которая будет выполнена в терминале
+jobs:
+  build:
 
-  print_short_technical_info: #Начало секции третий джобы
-    needs: print_full_technical_info
-    runs-on: ubuntu-latest #Среда выполнения джоба
-    
-    steps: #Начало секции шагов
-      - name: Print short_tech_info #Название шага
-        run: sudo lshw -short #Команда, которая будет выполнена в терминале
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"]
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install mypy and pytest
+        run: |
+          python -m pip install --upgrade pip
+          pip install mypy pytest
+      - name: Lint with mypy
+        run: |
+          mypy .
+      - name: Test with pytest
+        run: |
+          pytest ./tests
