--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Install mypy and pytest
         run: |
           python -m pip install --upgrade pip
-          pip install mypy pytest
+          pip install mypy mypy-extensions pytest pytest-env
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with mypy
         run: |
           mypy .
