--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Install mypy and pytest
         run: |
           python -m pip install --upgrade pip
-          pip install mypy mypy-extensions
-          mypy --install-types --non-interactive
+          pip install mypy
+          mypy --install-types --non-interactive -r requirements.txt
           pip install pytest pytest-env
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with mypy
