--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mypy
-          mypy --install-types --non-interactive -r requirements.txt
+          mypy --install-types --non-interactive
           pip install pytest pytest-env
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with mypy
