--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ charset-normalizer==3.2.0
 idna==3.4
 python-dotenv==1.0.0
 requests==2.31.0
+types-requests==2.31.0.2
+types-urllib3==1.26.25.14
+typing_extensions==4.7.1
 urllib3==2.0.4
